// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with no top bar defined, does not crash and matches snapshot 1`] = `
<div
  class="flex_jro6t0-o_O-flexDirectionColumn_1jtvojh-o_O-container_ou6sx1"
>
  <div
    class="fontWeight500_gt7myn-o_O-textTransformUppercase_4efw5a-o_O-topBarContainer_1miketn"
  >
    
  </div>
  <div
    class="flex_jro6t0-o_O-flexGrow1_t0tx82-o_O-flexDirectionRow_qb00m9-o_O-width100_zdxht7"
  >
    <div
      class="navContainer_ng807m"
    >
      <nav>
        <a
          href="/wallet/dashboard"
        >
          <div
            class="p3_vx7tlw-o_O-pl5_qh1ng-o_O-flex_jro6t0-o_O-alignItemsCenter_1moixrt-o_O-textTransformUppercase_4efw5a-o_O-fontWeight400_tt122m-o_O-wrap_s5wwyl"
          >
            Dashboard
          </div>
        </a>
        <a
          href="/wallet/personal"
        >
          <div
            class="p3_vx7tlw-o_O-pl5_qh1ng-o_O-flex_jro6t0-o_O-alignItemsCenter_1moixrt-o_O-textTransformUppercase_4efw5a-o_O-fontWeight400_tt122m-o_O-wrap_s5wwyl"
          >
            Personal accounts
          </div>
        </a>
        <a
          href="/wallet/multisig"
        >
          <div
            class="p3_vx7tlw-o_O-pl5_qh1ng-o_O-flex_jro6t0-o_O-alignItemsCenter_1moixrt-o_O-textTransformUppercase_4efw5a-o_O-fontWeight400_tt122m-o_O-wrap_s5wwyl"
          >
            Multisig accounts
          </div>
        </a>
        <a
          href="/wallet/cosigners"
        >
          <div
            class="p3_vx7tlw-o_O-pl5_qh1ng-o_O-flex_jro6t0-o_O-alignItemsCenter_1moixrt-o_O-textTransformUppercase_4efw5a-o_O-fontWeight400_tt122m-o_O-wrap_s5wwyl"
          >
            Cosigners
          </div>
        </a>
        <a
          href="/wallet/clients"
        >
          <div
            class="p3_vx7tlw-o_O-pl5_qh1ng-o_O-flex_jro6t0-o_O-alignItemsCenter_1moixrt-o_O-textTransformUppercase_4efw5a-o_O-fontWeight400_tt122m-o_O-wrap_s5wwyl"
          >
            Clients
          </div>
        </a>
        <a
          href="/wallet/help"
        >
          <div
            class="p3_vx7tlw-o_O-pl5_qh1ng-o_O-flex_jro6t0-o_O-alignItemsCenter_1moixrt-o_O-textTransformUppercase_4efw5a-o_O-fontWeight400_tt122m-o_O-wrap_s5wwyl"
          >
            Help
          </div>
        </a>
      </nav>
    </div>
    <div
      class="flex_jro6t0-o_O-flexGrow1_t0tx82-o_O-flexDirectionColumn_1jtvojh-o_O-mainContainer_1xmqyfw"
    >
      <div
        class="p5_1x929gn-o_O-pt3_1gv8f73-o_O-flex_jro6t0-o_O-flexDirectionColumn_1jtvojh-o_O-width100_zdxht7-o_O-container_1hoplq"
      >
        <div
          class="flex_jro6t0-o_O-flexDirectionRow_qb00m9-o_O-alignItemsCenter_1moixrt-o_O-width100_zdxht7-o_O-navbar_1u75k1v"
        >
          <h2
            class="textTransformUppercase_4efw5a"
          >
            PKS Wallet
          </h2>
          <div
            class="flex_jro6t0-o_O-flexDirectionRow_qb00m9-o_O-alignItemsCenter_1moixrt-o_O-height100_1yfus1e-o_O-pullRight_ls0e43"
          >
            <div
              class="mr4_kh8dwt-o_O-fontSize1_3kvou9-o_O-hidden_1u9fru1-o_O-notifications_e296pg"
            >
              <span
                class="lnr lnr-alarm"
              >
                
              </span>
              <div
                class="notificationCounterWrap_1k9zd85"
              >
                <div
                  class="flex_jro6t0-o_O-alignItemsCenter_1moixrt-o_O-justifyContentCenter_agrn11-o_O-notificationCounter_1xicdc3"
                >
                  5
                </div>
              </div>
            </div>
            <div
              class="hidden_1u9fru1-o_O-separator_xrxmxy"
            >
              
            </div>
            <div
              class="ml4_1pgo4wm-o_O-flex_jro6t0-o_O-flexDirectionColumn_1jtvojh-o_O-alignItemsFlexEnd_1f2mvon"
            >
              <div
                class="textTransformUppercase_4efw5a-o_O-deviceName_1pe4kle"
              >
                Trezor Label
              </div>
              <div
                class="textTransformUppercase_4efw5a-o_O-deviceStatus_1wddarm"
              >
                connected
              </div>
            </div>
            <div
              class="flex_jro6t0-o_O-alignItemsCenter_1moixrt-o_O-justifyContentCenter_agrn11-o_O-px2_6ebohg-o_O-ml1_1dn7v29-o_O-height100_1yfus1e-o_O-cursorPointer_13xlah4-o_O-dropdownButton_1w6iw80"
            >
              <span
                class="lnr lnr-chevron-down icon_ko4whp"
              >
                
              </span>
            </div>
          </div>
        </div>
        <div
          class="pb3_1a70m23-o_O-content_14ddvtv"
        >
          <h1>
            Test header
          </h1>
        </div>
      </div>
      <div
        class="flexGrow1_t0tx82-o_O-flexShrink0_fz3zdn-o_O-p5_1x929gn-o_O-mainContainer_1xmqyfw"
      >
        <div>
          Test main content
        </div>
      </div>
      <footer
        class="px5_1g0n6pg-o_O-footerContainer_14ddvtv"
      >
        <div
          class="width100_zdxht7-o_O-py4_r2hutn-o_O-px1_17oj4c4-o_O-textTransformUppercase_4efw5a-o_O-footer_r1wilx"
        >
          2018 © PKS Wallet. All rights reserved.
        </div>
      </footer>
    </div>
  </div>
</div>
`;

exports[`renders without crashing and matches snapshot 1`] = `
<div
  class="flex_jro6t0-o_O-flexDirectionColumn_1jtvojh-o_O-container_ou6sx1"
>
  <div
    class="fontWeight500_gt7myn-o_O-textTransformUppercase_4efw5a-o_O-topBarContainer_1miketn"
  >
    Test top bar
  </div>
  <div
    class="flex_jro6t0-o_O-flexGrow1_t0tx82-o_O-flexDirectionRow_qb00m9-o_O-width100_zdxht7"
  >
    <div
      class="navContainer_ng807m"
    >
      <nav>
        <a
          href="/wallet/dashboard"
        >
          <div
            class="p3_vx7tlw-o_O-pl5_qh1ng-o_O-flex_jro6t0-o_O-alignItemsCenter_1moixrt-o_O-textTransformUppercase_4efw5a-o_O-fontWeight400_tt122m-o_O-wrap_s5wwyl"
          >
            Dashboard
          </div>
        </a>
        <a
          href="/wallet/personal"
        >
          <div
            class="p3_vx7tlw-o_O-pl5_qh1ng-o_O-flex_jro6t0-o_O-alignItemsCenter_1moixrt-o_O-textTransformUppercase_4efw5a-o_O-fontWeight400_tt122m-o_O-wrap_s5wwyl"
          >
            Personal accounts
          </div>
        </a>
        <a
          href="/wallet/multisig"
        >
          <div
            class="p3_vx7tlw-o_O-pl5_qh1ng-o_O-flex_jro6t0-o_O-alignItemsCenter_1moixrt-o_O-textTransformUppercase_4efw5a-o_O-fontWeight400_tt122m-o_O-wrap_s5wwyl"
          >
            Multisig accounts
          </div>
        </a>
        <a
          href="/wallet/cosigners"
        >
          <div
            class="p3_vx7tlw-o_O-pl5_qh1ng-o_O-flex_jro6t0-o_O-alignItemsCenter_1moixrt-o_O-textTransformUppercase_4efw5a-o_O-fontWeight400_tt122m-o_O-wrap_s5wwyl"
          >
            Cosigners
          </div>
        </a>
        <a
          href="/wallet/clients"
        >
          <div
            class="p3_vx7tlw-o_O-pl5_qh1ng-o_O-flex_jro6t0-o_O-alignItemsCenter_1moixrt-o_O-textTransformUppercase_4efw5a-o_O-fontWeight400_tt122m-o_O-wrap_s5wwyl"
          >
            Clients
          </div>
        </a>
        <a
          href="/wallet/help"
        >
          <div
            class="p3_vx7tlw-o_O-pl5_qh1ng-o_O-flex_jro6t0-o_O-alignItemsCenter_1moixrt-o_O-textTransformUppercase_4efw5a-o_O-fontWeight400_tt122m-o_O-wrap_s5wwyl"
          >
            Help
          </div>
        </a>
      </nav>
    </div>
    <div
      class="flex_jro6t0-o_O-flexGrow1_t0tx82-o_O-flexDirectionColumn_1jtvojh-o_O-mainContainer_1xmqyfw"
    >
      <div
        class="p5_1x929gn-o_O-pt3_1gv8f73-o_O-flex_jro6t0-o_O-flexDirectionColumn_1jtvojh-o_O-width100_zdxht7-o_O-container_1hoplq"
      >
        <div
          class="flex_jro6t0-o_O-flexDirectionRow_qb00m9-o_O-alignItemsCenter_1moixrt-o_O-width100_zdxht7-o_O-navbar_1u75k1v"
        >
          <h2
            class="textTransformUppercase_4efw5a"
          >
            PKS Wallet
          </h2>
          <div
            class="flex_jro6t0-o_O-flexDirectionRow_qb00m9-o_O-alignItemsCenter_1moixrt-o_O-height100_1yfus1e-o_O-pullRight_ls0e43"
          >
            <div
              class="mr4_kh8dwt-o_O-fontSize1_3kvou9-o_O-hidden_1u9fru1-o_O-notifications_e296pg"
            >
              <span
                class="lnr lnr-alarm"
              >
                
              </span>
              <div
                class="notificationCounterWrap_1k9zd85"
              >
                <div
                  class="flex_jro6t0-o_O-alignItemsCenter_1moixrt-o_O-justifyContentCenter_agrn11-o_O-notificationCounter_1xicdc3"
                >
                  5
                </div>
              </div>
            </div>
            <div
              class="hidden_1u9fru1-o_O-separator_xrxmxy"
            >
              
            </div>
            <div
              class="ml4_1pgo4wm-o_O-flex_jro6t0-o_O-flexDirectionColumn_1jtvojh-o_O-alignItemsFlexEnd_1f2mvon"
            >
              <div
                class="textTransformUppercase_4efw5a-o_O-deviceName_1pe4kle"
              >
                Trezor Label
              </div>
              <div
                class="textTransformUppercase_4efw5a-o_O-deviceStatus_1wddarm"
              >
                connected
              </div>
            </div>
            <div
              class="flex_jro6t0-o_O-alignItemsCenter_1moixrt-o_O-justifyContentCenter_agrn11-o_O-px2_6ebohg-o_O-ml1_1dn7v29-o_O-height100_1yfus1e-o_O-cursorPointer_13xlah4-o_O-dropdownButton_1w6iw80"
            >
              <span
                class="lnr lnr-chevron-down icon_ko4whp"
              >
                
              </span>
            </div>
          </div>
        </div>
        <div
          class="pb3_1a70m23-o_O-content_14ddvtv"
        >
          <h1>
            Test header
          </h1>
        </div>
      </div>
      <div
        class="flexGrow1_t0tx82-o_O-flexShrink0_fz3zdn-o_O-p5_1x929gn-o_O-mainContainer_1xmqyfw"
      >
        <div>
          Test main content
        </div>
      </div>
      <footer
        class="px5_1g0n6pg-o_O-footerContainer_14ddvtv"
      >
        <div
          class="width100_zdxht7-o_O-py4_r2hutn-o_O-px1_17oj4c4-o_O-textTransformUppercase_4efw5a-o_O-footer_r1wilx"
        >
          2018 © PKS Wallet. All rights reserved.
        </div>
      </footer>
    </div>
  </div>
</div>
`;
